--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 <body>
   <div class="wrap">
     <main class="card">
-      <h1 class="title">Saco France — Ouverture prochaine</h1>
-      <p class="lead">Notre boutique arrive bientôt. Restez informés et découvrez nos nouveautés très vite.</p>
-      <a class="link" href="https://www.instagram.com/toncompte" target="_blank" rel="noopener">Suivre les actus</a>
+      <h1 class="title">Ouverture prochaine</h1>
+      <p class="lead">Votre boutique reviens très vite</p>
+      <a class="link" href="saco-france.fr" target="_blank" rel="noopener">Saco-france.fr</a>
       <div class="rule"></div>
-      <p class="muted">Besoin d’aide ? <a class="link" style="padding:0;border:none" href="mailto:contact@saco-france.fr">contact@saco-france.fr</a></p>
+      <p class="muted">Besoin d’aide ? <a class="link" style="padding:0;border:none" href="emilie.sacofrance@orange.fr">contact@saco-france.fr</a></p>
     </main>
   </div>
 </body>
