--- a/index.html
+++ b/index.html
@@ -22,11 +22,16 @@
   <div class="wrap">
     <main class="card">
       <h1 class="title">Ouverture prochaine</h1>
-      <p class="lead">Votre boutique reviens très vite</p>
-      <a class="link" href="saco-france.fr" target="_blank" rel="noopener">Saco-france.fr</a>
+      <p class="lead">Votre boutique revient très vite.</p>
+      <a class="link" href="https://saco-france.fr" target="_blank" rel="noopener">saco-france.fr</a>
       <div class="rule"></div>
-      <p class="muted">Besoin d’aide ? <a class="link" style="padding:0;border:none" href="emilie.sacofrance@orange.fr">contact@saco-france.fr</a></p>
-    </main>
+      <p class="muted">
+        Besoin d’aide ?
+      <a class="link" style="padding:0;border:none" href="mailto:contact@saco-france.fr">
+      contact@saco-france.fr
+      </a>
+  </p>
+</main>
   </div>
 </body>
 </html>
