--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <main class="card">
       <h1 class="title">Ouverture prochaine</h1>
       <p class="lead">Votre boutique revient très vite.</p>
-      <a class="link" href="https://saco-france.fr" target="_blank" rel="noopener">saco-france.fr</a>
+      <a class="link" href="https://saco-france.fr/password" target="_blank" rel="noopener">saco-france.fr</a>
       <div class="rule"></div>
       <p class="muted">
         Besoin d’aide ?
